<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="comdmen555.github.sleepmanager.MusicTimerActivity">

    <Button
        android:fontFamily="sans-serif-thin"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/startVolumeTimerButton"
        android:id="@+id/startDecayButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffffff" />


    <LinearLayout

        android:id="@+id/chart"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:backgroundTint="#ffffffff">

    </LinearLayout>

    <Button
        android:fontFamily="sans-serif-thin"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/resetVolumeTimer"
        android:id="@+id/resetDecayButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/chart"
        android:layout_alignEnd="@+id/chart"
        android:background="#ffffffff" />

    <Spinner

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/functionSpinner"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/typeOfDecayTextView"
        android:layout_toEndOf="@+id/typeOfDecayTextView"

        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:touchscreenBlocksFocus="false" />

    <TextView
        android:fontFamily="sans-serif-thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/volumeDecayFunction"
        android:id="@+id/typeOfDecayTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decayHoursSeekBar"
        android:layout_below="@+id/functionSpinner"
        android:layout_alignRight="@+id/resetDecayButton"
        android:layout_alignEnd="@+id/resetDecayButton"
        android:layout_marginTop="43dp"
        android:max="5"
        android:progress="0"
        android:layout_toEndOf="@+id/typeOfDecayTextView"
        android:layout_toRightOf="@+id/typeOfDecayTextView"
        android:progressTint="#ffffffff" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decayMinutesSeekBar"
        android:layout_above="@+id/resetDecayButton"
        android:layout_marginBottom="39dp"
        android:layout_alignRight="@+id/resetDecayButton"
        android:layout_alignEnd="@+id/resetDecayButton"
        android:progress="0"
        android:max="60"
        android:layout_toRightOf="@+id/typeOfDecayTextView"
        android:layout_toEndOf="@+id/typeOfDecayTextView"
        android:progressTint="#ffffffff" />/>

    <TextView
        android:fontFamily="sans-serif-thin"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hoursMusicTimer"
        android:id="@+id/decayHoursTextView"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/decayHoursSeekBar"
        android:layout_alignLeft="@+id/chronometer"
        android:layout_alignStart="@+id/chronometer" />

    <TextView
        android:fontFamily="sans-serif-thin"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/minutesMusicTimer"
        android:id="@+id/decayMinutesTextView"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/decayMinutesSeekBar"
        android:layout_alignLeft="@+id/chronometer"
        android:layout_alignStart="@+id/chronometer" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_alignBottom="@+id/startDecayButton"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />



    <ProgressBar
        style="@style/CustomProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentDoneProgressBar"
        android:layout_above="@+id/startDecayButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <TextView
        android:fontFamily="sans-serif-thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/percentageCompleteTextView"
        android:layout_above="@+id/typeOfDecayTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff" />


</RelativeLayout>
